# SenderDataProcessing

./: CMakeLists.txt  Makefile  README.md  a.out  main.cpp
Buffer/: Buffer.cpp  Buffer.h  CMakeLists.txt
Receiver/: CMakeLists.txt  Receiver.cpp  Receiver.h
Sender/: .Sender.cpp.swp  .Sender.h.swp  CMakeLists.txt  Sender.cpp  Sender.h
